@@ -13,7 +13,7 @@ wants to deal with as an array.
 
 =head1 Constructor
 
-=head2 new( I<$url>, I<$text>, I<$name>, I<$tag> ) 
+=head2 new( I<$base>, I<$url>, I<$text>, I<$name>, I<$tag> ) 
 
 Creates and returns a new C<WWW::Mechanize::Link> object.
 
@@ -21,13 +21,21 @@ Creates and returns a new C<WWW::Mechanize::Link> object.
 
 sub new {
     my $class = shift;
+    
+    if ( @_ != 5 ) {
+	require Carp;
+	Carp::croak "Must pass five arguments to WWW::Mechanize::Link's constructor\n";
+    }
 
+    my $base = shift;
     my $url = shift;
     my $text = shift;
     my $name = shift;
     my $tag = shift;
 
-    my $self = [$url,$text,$name,$tag];
+    # The order of the first four must stay as they are for
+    # compatibility with older code.
+    my $self = [$url,$text,$name,$tag,$base];
 
     bless $self, $class;
 
@@ -35,6 +43,10 @@ sub new {
 }
 
 =head1 Accessors
+
+=head2 $link->base() 
+
+Base URL to which the links are relative.
 
 =head2 $link->url() 
 
@@ -58,6 +70,7 @@ sub url  { return ($_[0])->[0]; }
 sub text { return ($_[0])->[1]; }
 sub name { return ($_[0])->[2]; }
 sub tag  { return ($_[0])->[3]; }
+sub base { return ($_[0])->[4]; }
 
 =head1 Author
 
